--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -19,7 +19,7 @@
                                 </a>
                             </div>
                             <div class="col-md-6 text-center">
-                                <h6 class="text-center text-white text-bold">Create Finish Good Recipe</h6>
+                                <h6 class="text-center text-white text-bold mb-0">Create Finish Good Recipe</h6>
                             </div>
 
                             <div class="col-md-2">
