--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -323,7 +323,7 @@
                                 <div class="px-2 py-1">
                                     <div class="row text-sm align-items-center">
                                         <div class="col-md-2 text-center">
-                                            <h6 class=" text-bold float-left text-white">
+                                            <h6 class=" text-bold float-left text-white mb-0">
                                                 Accessories Setup
                                             </h6>
                                         </div>
@@ -349,7 +349,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-12 p-0" style="margin-top:-25px">
+                    <div class="col-md-12 p-0" style="margin-top:-28px">
 
 
                         <div class="col-md-12 p-0" id="dataContainerAC">
