--- a/ERPWeb/Views/AgroConfiguration/CreateMeasurement.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateMeasurement.cshtml
@@ -8,26 +8,29 @@
 <div class="row" style="margin-top:-25px;">
     <div class="col-md-12 p-0">
 
+
         <div class="row" style="margin-top:0px">
             <div class="col-md-12">
-                <div class="card" style="background-color:#001f3f">
-                    <div class="card-header" style="text-align: center;">
-                        <div class="px-2 py-1">
-                            <div class="row align-items-center">
-                                <div class="col-md-3">
-                                    <a href="/AgroConfiguration/GetMeasurementList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
-                                        <i class="fas fa-arrow-alt-circle-left"></i>
-                                    </a>
-                                </div>
-                                <div class="col-md-6 text-center">
-                                    <h6 class="text-center text-bold text-white">
-                                        Create Measurement
-                                    </h6>
-                                </div>
-                                <div class="col-md-3"style="margin-top:0px;">
-                                    <button class=" emnsave-btn float-right" id="btnSubmit">SAVE <i class="fas fa-paper-plane"></i></button>
+                <div class="card mb-0" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
+                        <div class="row align-items-center">
+                            <div class="col-md-3">
+                                <a href="/AgroConfiguration/DepotList" class="float-left emnDrop-btn" title="Go To List">
+                                    <i class="fas fa-arrow-alt-circle-left"></i>
+                                </a>
+                            </div>
+                            <div class="col-md-6 text-center">
+                                <h6 class="text-center text-white text-bold mb-0">Create Measurement</h6>
+                            </div>
 
-                                </div>
+                            <div class="col-md-2">
+                            </div>
+                            <div class="col-md-1" style="margin-top:0px;">
+
+                                <button type="submit" id="btnSubmit" class="emnsave-btn">
+                                    <i class="fas fa-paper-plane"></i> Save
+                                </button>
+
                             </div>
                         </div>
                     </div>
@@ -35,27 +38,31 @@
             </div>
         </div>
 
+
+
+
+
         <div class="card-body text-sm">
             <div class="row " style="margin-top:-18px;">
 
                 <div class="col-md-2">
                     <label class="control-label font-weight-bold " for="txtmeasurementName">Measurement Name<span style="color:red">*</span></label>
-                    <input type="text" name="measurementName" id="txtmeasurementName" class="form-control form-control-sm" autofocus />
+                    <input type="text" placeholder="MeasurmentName" name="measurementName" id="txtmeasurementName" class="form-control form-control-sm" autofocus="autofocus" />
                     <span class="error hide req-txtmeasurementName">Measurement Name is required</span>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label font-weight-bold " for="masterBox">Master Box</label>
-                    <input type="number" name="masterBox" id="txtmasterBox" class="form-control form-control-sm" />
+                    <input type="number" placeholder="MasterBox" name="masterBox" id="txtmasterBox" class="form-control form-control-sm" />
                     <span class="error hide req-txtmasterBox">Master Box is required</span>
                 </div>
                 <div class="col-md-2">
                     <label for="innerBox" class="control-label font-weight-bold">Innner Box</label>
-                    <input type="number" id="txtinnerBox" name="innerBox" class="form-control form-control-sm" />
+                    <input type="number"  placeholder="InnerBox" id="txtinnerBox" name="innerBox" class="form-control form-control-sm" />
                     <span class="error hide req-txtinnerBox">Inner Box is required</span>
                 </div>
                 <div class="col-md-2">
                     <label class="control-label" for="model">Pack Size</label>
-                    <input type="number" id="txtpackSize" name="packSize" class="form-control form-control-sm">
+                    <input type="number"placeholder="PackSize" id="txtpackSize" name="packSize" class="form-control form-control-sm">
                     <span class="error hide req-txtpackSize">Pack Size is required</span>
                 </div>
 
@@ -71,19 +78,18 @@
                 <div class="col-md-1">
                     <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                     <div class="clearfix">
-                        <button type="submit" class="btn btn-sm btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
+                        <button type="submit" class="float-left float-md-start text-bold" id="addTolist"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="col-md-12" style="margin-top:-13px">
-    <div class="card">
-        <div class="card-body" style="margin-top:-10px">
-            <div class="col-md-12">
+<div class="col-md-12 p-0" style="margin-top:-13px">
+
+    
                 <div class="row">
-                    <div class="col-md-12" style="overflow-y:scroll">
+                    <div class="col-md-12 p-0">
                         <table class="table table-bordered table-sm text-sm table-striped table-responsive-lg" id="tblMeasurement">
                             <thead>
 
@@ -101,10 +107,8 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
 
-    </div>
+
 </div>
 
 
@@ -192,7 +196,7 @@
                 }
 
                 var measurementItem = "<td class='text-center' >" + item + "</td>";
-                var action = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del'><i class='far fa-trash-alt' ></i>Delete</a></td>";
+                var action = "<td class='text-center'><a href='#' class='emn-btn data-onfly-del'><i class='far fa-trash-alt' ></i></a></td>";
 
                 var tr = "<tr>" + sl + measurementName + measurementItem + unitName + unitId + org + masterBox + innerBox + packSize + action  +"</tr>";
                 $("#btnSubmit").show();
