--- a/ERPWeb/Views/AgroConfiguration/GetStockiestWiseYearlyTargetList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestWiseYearlyTargetList.cshtml
@@ -4,31 +4,38 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row" style="margin-top:-25px">
+<div class="row" style="margin-top:-24px">
     <div class="col-md-12">
 
-        <div class="card card-navy">
-            <div class="card-header">
 
-                <div class="row">
-                    <div class="col-md-3">
-                        <a href="/AgroConfiguration/GetStockiestWiseYearlyTargetList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
-                            <i class="fas fa-arrow-alt-circle-left"></i>
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="text-center text-bold">
-                            Create Stockiest Wise Target
-                        </h4>
-                    </div>
-                    <div class="col-md-3">
-                        <button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
+        <div class="row">
+            <div class="col-md-12 p-0">
+                <div class="card mb-0" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
+                        <div class="row text-sm align-items-center">
 
+
+                            <div class="col-4">
+
+                            </div>
+                            <div class="col-md-4 text-center">
+
+                                <h6 class="text-center text-bold text-white mb-0">
+                                    Create Stockiest Wise Target
+                                </h6>
+                            </div>
+
+                            <div class="col-4">
+                                <button class="emnsave-btn" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
+
 
         <div class="card-body text-sm">
             <div class="row " style="margin-top:-18px;">
@@ -44,7 +51,7 @@
                     @*<input type="text" id="ddlStockiestName" name="ddlStockiestName" class="form-control form-control-sm" readonly />*@
                     <span class="error hide req-ddlStockiestName">Stockiest Name is required</span>
                 </div>
-               
+
                 <div class="col-md-2">
                     <label for="ddlYear">Year</label>
                     <input type="text" class="form-control form-control-sm datepicker" name="datepicker" id="ddlYear" />
@@ -79,44 +86,41 @@
                 <div class="col-md-1 " style="margin-top:5px;">
                     <label for="addButton" class="control-label"></label>
                     <div class="clearfix">
-                        <button type="submit" class="btn btn-outline-success float-left btn-sm " id="addButton" title="Add To List"><i class="fas fa-plus "></i></button>
+                        <button type="submit" class="float-left float-md-start text-bold " id="addButton" title="Add To List"><i class="fas fa-plus "></i></button>
                     </div>
                 </div>
 
             </div>
 
-            <div class="row">
-                <div class="col-md-12">
-                    <table class="table table-bordered table-striped table-sm text-sm table-responsive-lg" id="tblSingleItems">
-                        <thead>
-                            <tr>
-                                <th colspan="9">
-                                    
-                                </th>
-                            </tr>
 
-                            <tr class="text-center btn-dark">
-                                <th style="width:5%">#SL</th>
-                                <th style="width:15%">Territory Name</th>
-                                <th style="width:15%">Stockiest Name</th>
-                                <th style="width:10%">Year</th>
-                                <th style="width:10%">Month Name</th>
-                                <th style="width:10%">Target Qty</th>
-                                <th style="width:10%">Action</th>
-                                <th class="hide">TerritoryId</th>
-                                <th class="hide">StockiestId</th>
-                                <th class="hide">Month</th>
-                                @*<th class="hide">Year</th>*@
-                                
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
-                </div>
 
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 p-0">
+                <table class="table table-bordered table-striped table-sm text-sm table-responsive-lg" id="tblSingleItems">
+                    <thead>
+                        <tr class="text-center btn-dark">
+                            <th style="width:5%">#SL</th>
+                            <th style="width:15%">Territory Name</th>
+                            <th style="width:15%">Stockiest Name</th>
+                            <th style="width:10%">Year</th>
+                            <th style="width:10%">Month Name</th>
+                            <th style="width:10%">Target Qty</th>
+                            <th style="width:10%">Action</th>
+                            <th class="hide">TerritoryId</th>
+                            <th class="hide">StockiestId</th>
+                            <th class="hide">Month</th>
+                         
+
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </div>
 
         </div>
+
 
     </div>
 
@@ -165,7 +169,7 @@
                 var td4 = "<td class='text-center'>" + ddlYear.val() + "</td>";
                 var td5 = "<td class='text-center'>" + dropDownSelectedText("ddlMonth") + "</td>";
                 var td6 = "<td class='text-center text-bold'>" + txtTargetQty.val() + "</td>";
-                var td7 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del'><i class='far fa-trash-alt'></i> Delete</a></td>";
+                var td7 = "<td class='text-center'><a href='#' class='emn-btn data-onfly-del'><i class='far fa-trash-alt'></i> Delete</a></td>";
                 var td8 = "<td class='hide TerritoryId'>" + ddlTeritoryName.val() + "</td>";
                 var td9 = "<td class='hide StockiestId'>" + ddlStockiestName.val() + "</td>";
                 var td10 = "<td class='hide Month'>" + ddlMonth.val() + "</td>";
